--- a/ml-consulta-main/views/home.html
+++ b/ml-consulta-main/views/home.html
@@ -10,12 +10,111 @@
     <header>
         <!-- contenido futuro -->
         <img src="/images/logo-mercado-liebre.svg" alt="logo mercado liebre">
+
+        <p> Lugar para poner la barra de búsqueda </p>
+        <p>Comprá el cuotas y sin tarjeta de crédito </p>
+
+        <ul class= "lista">
+            <li> <a href="#">Ofertas</a> </li>
+            <li> <a href="#"> Tiendas Oficiales </a> </li>
+            <li> <a href="#"> Vender </a> </li>
+            <li> <a href="#"> Ayuda </a> </li>
+        </ul>
+
+        <ul class="lista">
+            <li> <a href="#"> Creá tu cuenta </a> </li>
+            <li> <a href="#"> Ingresá </a> </li>
+            <li> <a href="#"> Mis compras </a> </li>
+        </ul>
     </header>
     <main>
-        <!-- contenido futuro -->
+
+        <h1>Basado en tu última visita</h1>
+        
+        <div>
+            <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera moulinex">
+            <p> $6770 </p>
+            <p> 40% OFF </p>
+            <h3> Cafetera Moulinex </h3>
+        </div>
+
+        <div>
+        <img src="/images/img-macbook-pro-2019.jpg" alt="macbook pro">
+        <p> $230.000 </p>
+        <p> 20% OFF </p>
+        <h3> MacBook Pro 2019 </h3>
+        </div>
+
+        <div>
+            <img src="/images/img-samsung-galaxy-s10.jpg" alt="samsung galaxy">
+            <p>$70.500</p>
+            <p> 10% OFF </p>
+            <h3> Samsumg Galaxy S10</h3> 
+        </div>
+
+        <div>
+        <img src="/images/img-tv-samsung-smart.jpg" alt="samsung smart">
+        <p> $23.200 </p>
+        <p> 5% OFF </p>
+        <h3> SmartTV Samsung 43"</h3>
+        </div>
+
+        <h1> Sección de Ofertas</h1>
+
+        <div>
+            <img src="/images/img-cafetera-moulinex.jpg" alt="cafetera moulinex">
+            <p> $6770 </p>
+            <p> 40% OFF </p>
+            <h3> Cafetera Moulinex </h3>
+        </div>
+
+        <div>
+        <img src="/images/img-macbook-pro-2019.jpg" alt="macbook pro">
+        <p> $230.000 </p>
+        <p> 20% OFF </p>
+        <h3> MacBook Pro 2019 </h3>
+        </div>
+
+        <div>
+            <img src="/images/img-samsung-galaxy-s10.jpg" alt="samsung galaxy">
+            <p>$70.500</p>
+            <p> 10% OFF </p>
+            <h3> Samsumg Galaxy S10</h3> 
+        </div>
+
+        <div>
+        <img src="/images/img-tv-samsung-smart.jpg" alt="samsung smart">
+        <p> $23.200 </p>
+        <p> 5% OFF </p>
+        <h3> SmartTV Samsung 43"</h3>
+        </div>
+
+
     </main>
+
     <footer>
-        <!-- contenido futuro -->
+        <div> 
+            <h3>Pagá con tarjeta o en efectivo </h3>
+            <p> Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
+                puntos de pago. ¡Y siempre es seguro! </p>
+        </div>
+
+        <div>
+            <h3>Envío gratis desde $2.500 </h3>
+            <p> Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
+                productos. Es un beneficio de Mercado Puntos. </p>
+        </div> 
+
+        <div> 
+            <h3> Seguridad, de principio a fin </h3>
+            <p> ¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
+                porque estás siempre protegid@. </p>
+        </div>
+
+        <div> 
+            <p> Copyright © 1999-2020 MercadoLiebre S.R.L. </p>
+        </div>
+
     </footer>
 </body>
 </html>
